docs: :memo: create the frame of index and about page

--- a/about.html
+++ b/about.html
@@ -2,9 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>About | Boyuan YE</title>
+    <link rel="shortcut icon" href="resources/favicon.ico">
+    <link rel="stylesheet" href="css_file/about.css">
+    <link rel="stylesheet" href="css_file/global.css">
 </head>
 <body>
+    <div>
+        <header>Portfolio</header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Playground</a></li>
+                <li><a href="about.html" class="current_page">About</a></li>
+                <li><a href="">Resume</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <main>
+        <div class="self_intro">
+            <div class="self_intro_img"><img src="resources/avatar.png" alt="my_img" class="my_img"></div>
+            <div class="self_intro_content">
+                <h2><i>Hi, I'm Boyuan</i></h2>
+                <span>Originally from Guizhou China, I studied Computer Science of Artificial Intelligence in my Bachlor's Degree and 
+                    graduated from the University of Nottingham Ningbo China in July 2022.<br><br>
+                    I currently live in Boston and now I'm studying Software Engineering System at the Northeastern University. <br>
+                    My passion for design started when I developed a campus forum with my friends at the senior year 
+                    with my friends. During that time, I experienced the fun of software development, so I decided to take my 
+                    Master's Degree in NEU.<br><br>
+                    You can follow me here —  <a href="https://www.instagram.com/yby_0930/" class="link">Instagram</a>, 
+                    <a href="https://www.linkedin.com/in/博源-叶-5279a6291/" class="link">LinkedIn</a><br>
+                    or reach out by email — <a href="mailto:yeboyuan0930@gmail.com" class="link">yeboyuan0930@gmail.com</a>
+                </span>
+
+            </div>
+        </div>
+    </main>
+
+
+    <footer>
+        <div class="footer_copyright">
+            Copyright &copy; Boyuan YE 2023
+        </div>
+        <div class="footer_info">
+            <ul>
+                <li><a href="mailto:ye.boy@northeastern.edu"><img src="resources/email.png" alt="email"></a></li>
+                <li><a href="https://www.instagram.com/yby_0930/"><img src="resources/ins.png" alt="ins"></a></li>
+                <li><a href="tel:8575401491"><img src="resources/tel.png" alt="tel"></a></li>
+            </ul>
+
+        </div>
+    </footer>
     
 </body>
 </html>
