feat: :sparkles: media query for index, about

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boyuan YE's Portfolio</title>
     <link rel="shortcut icon" href="resources/favicon.ico">
     <link rel="stylesheet" href="css_file/index.css">
@@ -22,7 +23,6 @@
 
     <main id="Playground">
         <div class="intro">
-            <img src="resources/my_img.jpg" alt="avatar" class="intro_avatar">
             <div class="intro_name">BOYUAN&nbsp;YE</div>
             <p class="intro_content">
                 I'm a SES student of ✨<span style="color: aquamarine;">Northeastern University</span>✨, currently<br>
