--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Boyuan YE</title>
     <link rel="shortcut icon" href="resources/favicon.ico">
     <link rel="stylesheet" href="css_file/about.css">
