docs: :memo: fit mobile device

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="resources/favicon.ico">
-    <link rel="stylesheet" href="css_file/gallary.css">
+    <link rel="stylesheet" href="css_file/gallery.css">
+    <link rel="stylesheet" href="css_file/global.css">
 </head>
 <body>
     <h1>Diving Image Gallery</h1>
@@ -13,9 +14,9 @@
     <button onclick='location.href=("index.html")'>Back</button>
     <div id="gallery">
         <ul>
-            <li><a href="resources/photo1.jpg"><img src="resources/photo1.jpg" width="100"   height="75" alt="Crab">
+            <li><a href="resources/photo1.jpg"><img src="resources/photo1.jpg"  alt="Crab" class="thumb_img">
                 <span><figure>
-                    <img src="resources/photo1.jpg" width="960" height="540" alt="crab">
+                    <img src="resources/photo1.jpg"  alt="crab" class="normal_img">
                     <figcaption>Crab (in Malaysia)</figcaption>
                     <p class="img_description">In December 2018, I went to Semporna, Malaysia with two of my friends. We spent there 10 days and got the OW certificate.
                         Semporna (Malay: Semporna) is a small town in the Tohu province of Sabah, Malaysia, which means "perfect" in Malay.Surrounded by the sea, Semporna 
@@ -25,10 +26,10 @@
                 </span>
             </a></li>
 
-            <li><a href="resources/photo2.jpg"><img src="resources/photo2.jpg" width="100"   height="75" alt="Aplisya">
+            <li><a href="resources/photo2.jpg"><img src="resources/photo2.jpg"  alt="Aplisya" class="thumb_img">
                 <span>
                     <figure>
-                        <img src="resources/photo2.jpg" width="960" height="540" alt="Aplisya">
+                        <img src="resources/photo2.jpg"  alt="Aplisya" class="normal_img">
                         <figcaption>Aplisya (in Malaysia)</figcaption>
                         <p class="img_description">In December 2018, I went to Semporna, Malaysia with two of my friends. We spent there 10 days and got the OW certificate.
                             Semporna (Malay: Semporna) is a small town in the Tohu province of Sabah, Malaysia, which means "perfect" in Malay.Surrounded by the sea, Semporna 
@@ -38,10 +39,10 @@
                 </span>
             </a></li>
 
-            <li><a href="resources/photo3.jpg"><img src="resources/photo3.jpg" width="100"   height="75" alt="Anemone Shrimp">
+            <li><a href="resources/photo3.jpg"><img src="resources/photo3.jpg"  alt="Anemone Shrimp" class="thumb_img">
                 <span>
                     <figure>
-                        <img src="resources/photo3.jpg" width="960" height="540" alt="Anemone Shrimp">
+                        <img src="resources/photo3.jpg"  alt="Anemone Shrimp" class="normal_img">
                         <figcaption>Anemone Shrimp (in Malaysia)</figcaption>
                         <p class="img_description">In December 2018, I went to Semporna, Malaysia with two of my friends. We spent there 10 days and got the OW certificate.
                             Semporna (Malay: Semporna) is a small town in the Tohu province of Sabah, Malaysia, which means "perfect" in Malay.Surrounded by the sea, Semporna 
@@ -51,10 +52,10 @@
                     </span>
             </a></li>
 
-            <li><a href="resources/photo4.jpg"><img src="resources/photo4.jpg" width="100"   height="75" alt="Group Photo">
+            <li><a href="resources/photo4.jpg"><img src="resources/photo4.jpg"  alt="Group Photo" class="thumb_img">
                 <span>
                     <figure>
-                        <img src="resources/photo4.jpg" width="960" height="540" alt="Group Photo">
+                        <img src="resources/photo4.jpg"  alt="Group Photo" class="normal_img">
                         <figcaption>Get the AOW certificate in Thailand</figcaption>
                         <p class="img_description">In Auguast 2019, I went to Bali, Thailand to get my AOW certificate, I dive there for 3 days with two learner from Macao.
                             The cave diving and wreck diving is pretty interesting, but the water quality and visibility are not that good.
@@ -63,10 +64,10 @@
                 </span>
             </a></li>
 
-            <li><a href="resources/photo5.jpg"><img src="resources/photo5.jpg" width="100"   height="75" alt="Cave Diving">
+            <li><a href="resources/photo5.jpg"><img src="resources/photo5.jpg"  alt="Cave Diving" class="thumb_img">
                 <span>
                     <figure>
-                        <img src="resources/photo5.jpg" width="960" height="540" alt="Cave Diving">
+                        <img src="resources/photo5.jpg"  alt="Cave Diving" class="normal_img">
                         <figcaption>Cave Diving in Thailand</figcaption>
                         <p class="img_description">In Auguast 2019, I went to Bali, Thailand to get my AOW certificate, I dive there for 3 days with two learner from Macao.
                             The cave diving and wreck diving is pretty interesting, but the water quality and visibility are not that good.
@@ -75,10 +76,10 @@
                 </span>
             </a></li>
 
-            <li><a href="resources/photo6.jpg"><img src="resources/photo6.jpg" width="100"   height="75" alt="Wreck of Liberty 1">
+            <li><a href="resources/photo6.jpg"><img src="resources/photo6.jpg"  alt="Wreck of Liberty 1" class="thumb_img">
                 <span>
                     <figure>
-                        <img src="resources/photo6.jpg" width="960" height="540" alt="Wreck of Liberty 1">
+                        <img src="resources/photo6.jpg"  alt="Wreck of Liberty 1" class="normal_img">
                         <figcaption>Wreck of Liberty 1</figcaption>
                         <p class="img_description">In July 2023, after 3 years pandamic, i finally have a chance to dive aboard. I went to Indonesia with one of my college classmate
                             and had 4 days fun dive there. We visited Coral Garden, submarine scarp and also the famous Wreck of Liberty. 
@@ -88,10 +89,10 @@
                 </span>
             </a></li>
 
-            <li><a href="resources/photo7.jpg"><img src="resources/photo7.jpg" width="100"   height="75" alt="Wreck of Liberty 2">
+            <li><a href="resources/photo7.jpg"><img src="resources/photo7.jpg"  alt="Wreck of Liberty 2" class="thumb_img">
                 <span>
                     <figure>
-                        <img src="resources/photo7.jpg" width="960" height="540" alt="Wreck of Liberty 2">
+                        <img src="resources/photo7.jpg"  alt="Wreck of Liberty 2" class="normal_img">
                         <figcaption>Wreck of Liberty 2</figcaption>
                         <p class="img_description">In July 2023, after 3 years pandamic, i finally have a chance to dive aboard. I went to Indonesia with one of my college classmate
                             and had 4 days fun dive there. We visited Coral Garden, submarine scarp and also the famous Wreck of Liberty. 
@@ -100,10 +101,10 @@
                 </span>
             </a></li>
 
-            <li><a href="resources/photo8.jpg"><img src="resources/photo8.jpg" width="100"   height="75" alt="Clownfish">
+            <li><a href="resources/photo8.jpg"><img src="resources/photo8.jpg"  alt="Clownfish" class="thumb_img">
                 <span>
                     <figure>
-                        <img src="resources/photo8.jpg" width="960" height="540" alt="Clownfish">
+                        <img src="resources/photo8.jpg"  alt="Clownfish" class="normal_img">
                         <figcaption>Clownfish in Indonesia</figcaption>
                         <p class="img_description">In July 2023, after 3 years pandamic, i finally have a chance to dive aboard. I went to Indonesia with one of my college classmate
                             and had 4 days fun dive there. We visited Coral Garden, submarine scarp and also the famous Wreck of Liberty. 
@@ -113,6 +114,21 @@
             </a></li>
         </ul>
     </div>
+    <div style="height: 100px; clear: both;"></div>
+
+    <footer>
+        <div class="footer_copyright">
+            Copyright &copy; Boyuan YE 2023
+        </div>
+        <div class="footer_info">
+            <ul>
+                <li><a href="mailto:ye.boy@northeastern.edu"><img src="resources/email.png" alt="email"></a></li>
+                <li><a href="https://www.instagram.com/yby_0930/"><img src="resources/ins.png" alt="ins"></a></li>
+                <li><a href="tel:8575401491"><img src="resources/tel.png" alt="tel"></a></li>
+            </ul>
+
+        </div>
+    </footer>
 </body>
 </html>
 
